--- a/modular_cartesio/concert_stack.yaml
+++ b/modular_cartesio/concert_stack.yaml
@@ -28,13 +28,13 @@ postural:
   lambda: 0.005
   disabled_joints:
     - J1_A
-    - J2_A
+    - J_wheel_A
     - J1_B
-    - J2_B
+    - J_wheel_B
     - J1_C
-    - J2_C
+    - J_wheel_C
     - J1_D
-    - J2_D
+    - J_wheel_D
 
 joint_limits:
   type: JointLimits
@@ -44,52 +44,52 @@ velocity_limits:
 
 steering_fl:
     type: CentauroSteering
-    wheel_name: L_2_A
+    wheel_name: wheel_A
     lib_name: libcentauro_cartesio_addon.so
     lambda: 0.1
 
 steering_fr:
     type: CentauroSteering
-    wheel_name: L_2_B
+    wheel_name: wheel_B
     lib_name: libcentauro_cartesio_addon.so
     lambda: 0.1
 
 steering_hl:
     type: CentauroSteering
-    wheel_name: L_2_C
+    wheel_name: wheel_C
     lib_name: libcentauro_cartesio_addon.so
     lambda: 0.1
 
 steering_hr:
     type: CentauroSteering
-    wheel_name: L_2_D
+    wheel_name: wheel_D
     lib_name: libcentauro_cartesio_addon.so
     lambda: 0.1
 
 rolling_fl:
     type: WheelRolling
-    wheel_name: L_2_A
+    wheel_name: wheel_A
     lib_name: libcentauro_cartesio_addon.so
     wheel_radius: *wheel_radius
     weight: 1000.0
 
 rolling_fr:
     type: WheelRolling
-    wheel_name: L_2_B
+    wheel_name: wheel_B
     lib_name: libcentauro_cartesio_addon.so
     wheel_radius: *wheel_radius
     weight: 1000.0
 
 rolling_hl:
     type: WheelRolling
-    wheel_name: L_2_C
+    wheel_name: wheel_C
     lib_name: libcentauro_cartesio_addon.so
     wheel_radius: *wheel_radius
     weight: 1000.0
 
 rolling_hr:
     type: WheelRolling
-    wheel_name: L_2_D
+    wheel_name: wheel_D
     lib_name: libcentauro_cartesio_addon.so
     wheel_radius: *wheel_radius
     weight: 1000.0
