--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "modular_resources"]
 	path = modular_resources
-	url = git@github.com:advrhumanoids/modular_resources.git
+	url = https://github.com/advrhumanoids/modular_resources.git
