--- a/concert_gazebo/package.xml
+++ b/concert_gazebo/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>modular_examples</name>
+  <name>concert_gazebo</name>
   <version>0.0.0</version>
-  <description>The modular_examples package</description>
+  <description>The concert_gazebo package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/modular_examples</url> -->
+  <!-- <url type="website">http://wiki.ros.org/concert_gazebo</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
