--- a/concert_xbot2/modular.yaml
+++ b/concert_xbot2/modular.yaml
@@ -13,10 +13,10 @@ ModelInterface:
 
 # hal
 xbotcore_device_configs:
-    sim: $(rospack find modular_xbot2)/hal/ModularBot_gz.yaml
-    dummy: $(rospack find modular_xbot2)/hal/ModularBot_dummy.yaml
-    ec_imp: $(rospack find modular_xbot2)/hal/ModularBot_ec_all.yaml
-    ec_idle: $(rospack find modular_xbot2)/hal/ModularBot_ec_all.yaml
+    sim: $(rospack find concert_xbot2)/hal/ModularBot_gz.yaml
+    dummy: $(rospack find concert_xbot2)/hal/ModularBot_dummy.yaml
+    ec_imp: $(rospack find concert_xbot2)/hal/ModularBot_ec_all.yaml
+    ec_idle: $(rospack find concert_xbot2)/hal/ModularBot_ec_all.yaml
 
 # define threads to be created
 xbotcore_threads:
