--- a/concert_xbot2/package.xml
+++ b/concert_xbot2/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>modular_xbot2</name>
+  <name>concert_xbot2</name>
   <version>0.0.0</version>
-  <description>The modular_xbot2 package</description>
+  <description>The concert_xbot2 package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/modular_xbot2</url> -->
+  <!-- <url type="website">http://wiki.ros.org/concert_xbot2</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
