--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,9 @@
 FROM arturolaurenzi/xbot2_focal_base_nvidia:latest
+
+USER root
+SHELL ["/bin/bash", "-ic"]
+RUN sudo apt-get update
+
 USER user
 SHELL ["/bin/bash", "-ic"]
 
@@ -17,7 +22,7 @@ RUN forest add-recipes git@github.com:advrhumanoids/multidof_recipes.git --tag m
 RUN forest grow centauro_cartesio -j 4
 
 # concert simulation package
-RUN forest grow concert_description
+RUN forest grow concert_description --pwd user
 
 # a few usage tips..
 RUN echo 'echo "USAGE:"' >> /home/user/.bashrc
