dockerfile uses new recipe concert_all

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -18,17 +18,16 @@ RUN forest init
 RUN echo "source $PWD/setup.bash" >> /home/user/.bashrc
 RUN forest add-recipes git@github.com:advrhumanoids/multidof_recipes.git --tag master 
 
-# steering/rolling modules for ik
-RUN forest grow centauro_cartesio -j 4
-
-# concert simulation package
-RUN forest grow concert_description --pwd user
+# concert packages
+RUN forest grow concert_all --verbose --jobs 4 --pwd user
 
 # a few usage tips..
 RUN echo 'echo "USAGE:"' >> /home/user/.bashrc
 RUN echo 'echo "run simulation....: mon launch concert_gazebo concert.launch"' >> /home/user/.bashrc
 RUN echo 'echo "run monitoring gui: xbot2-gui"' >> /home/user/.bashrc
 RUN echo 'echo "run CartesI/O IK..: mon launch concert_cartesio concert.launch xbot:=true gui:=true"' >> /home/user/.bashrc
+RUN echo 'echo "run odometry......: mon launch concert_odometry concert_odometry.launch publish_ground_truth:=true gui:=true"' >> /home/user/.bashrc
+
 RUN echo 'echo ""' >> /home/user/.bashrc
 
 # set ownership to user for the whole home folder
