--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,10 @@ before_install:
   - set +e
 
 script: 
-  - if [ -z $TRAVIS_TAG ]; then echo "Not a tag build, will not upload docker registry"; travis_terminate 0; fi
+  - if [ -z $TRAVIS_TAG ]; then echo "Not a tag build, will upload concert_description:unstable tag"; fi
+  - if [ -z $TRAVIS_TAG ]; docker tag arturolaurenzi/concert_description:latest arturolaurenzi/concert_description:unstable; fi
+  - if [ -z $TRAVIS_TAG ]; docker push arturolaurenzi/concert_description:unstable; fi
+  - if [ -z $TRAVIS_TAG ]; then travis_terminate 0; fi
   - docker push arturolaurenzi/concert_description:latest
   - docker tag arturolaurenzi/concert_description:latest arturolaurenzi/concert_description:$TRAVIS_TAG
   - docker push arturolaurenzi/concert_description:$TRAVIS_TAG
