--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ notifications:
 before_install:
   - set -e
   - echo "Travis tag is $TRAVIS_TAG"
-  - ./docker/build-docker.bash
+  - ./docker/build-docker.bash -pull --no-cache
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - set +e
 
