use https instead of ssh

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "concert_resources"]
 	path = concert_resources
-	url = git@github.com:ADVRHumanoids/concert_resources.git
+	url = https://github.com/ADVRHumanoids/concert_resources.git
