--- a/concert_cartesio/concert_stack.yaml
+++ b/concert_cartesio/concert_stack.yaml
@@ -18,7 +18,7 @@ ee:
   distal_link: ee_E
   base_link: base_link
   lambda: 0.1
-  indices: [0, 1, 2]
+  indices: [0, 1, 2, 3, 4, 5]
 
 base:
   type: Cartesian
