--- a/concert_planning/CMakeLists.txt
+++ b/concert_planning/CMakeLists.txt
@@ -10,7 +10,8 @@ project(concert_planning)
 find_package(catkin REQUIRED COMPONENTS
          roscpp
          eigen_conversions
-         tf tf_conversions)
+         tf tf_conversions
+         geometry_msgs)
 find_package(PCL REQUIRED)
 find_package(Eigen3 REQUIRED)
 
