fix Dockerfile: force pybind11 forest installation

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,6 +19,7 @@ RUN echo "source $PWD/setup.bash" >> /home/user/.bashrc
 RUN forest add-recipes git@github.com:advrhumanoids/multidof_recipes.git --tag concert 
 
 # concert packages
+RUN forest grow pybind11 --verbose --jobs 4 --pwd user
 RUN forest grow concert_all --verbose --jobs 4 --pwd user
 
 # a few usage tips..
