add force max to impedance config

--- a/concert_xbot2/ModularBot_impedance_config.yaml
+++ b/concert_xbot2/ModularBot_impedance_config.yaml
@@ -22,13 +22,20 @@ EE:
     base_link: base_link
     distal_link: ee_E
     # impedance_ref_link: ee_E
+    force_max: 
+        - 100000.0
+        - 100000.0
+        - 100000.0
+        - 10000.0
+        - 10000.0
+        - 10000.0
     stiffness:
-        - 10000.0
-        - 10000.0
-        - 10000.0
-        - 1500.0
-        - 1500.0
-        - 1500.0
+        - 1000.0
+        - 1000.0
+        - 1000.0
+        - 150.0
+        - 150.0
+        - 150.0
     damping:
         - 0.7
         - 0.7
