--- a/concert_xbot2/modular.yaml
+++ b/concert_xbot2/modular.yaml
@@ -5,18 +5,17 @@ XBotInterface:
  srdf_path: /tmp/modularbot.srdf
 
 ModelInterface:
-  model_type: RBDL
-  is_model_floating_base: true
+  model_type: pin
 
   
 ## XBot2 related configuration
 
 # hal
 xbotcore_device_configs:
-    sim: $(rospack find concert_xbot2)/hal/ModularBot_gz.yaml
-    dummy: $(rospack find concert_xbot2)/hal/ModularBot_dummy.yaml
-    ec_imp: $(rospack find concert_xbot2)/hal/ModularBot_ec_all.yaml
-    ec_idle: $(rospack find concert_xbot2)/hal/ModularBot_ec_all.yaml
+    sim: $(ros2 pkg find --share concert_xbot2)/hal/ModularBot_gz.yaml
+    dummy: $(ros2 pkg find --share concert_xbot2)/hal/ModularBot_dummy.yaml
+    ec_imp: $(ros2 pkg find --share concert_xbot2)/hal/ModularBot_ec_all.yaml
+    ec_idle: $(ros2 pkg find --share concert_xbot2)/hal/ModularBot_ec_all.yaml
 
 # define threads to be created
 xbotcore_threads:
