--- a/concert_odometry_ros2/CMakeLists.txt
+++ b/concert_odometry_ros2/CMakeLists.txt
@@ -8,7 +8,7 @@ endif()
 # find dependencies
 find_package(ament_cmake REQUIRED)
 
-install(DIRECTORY config/ launch/ rviz/
+install(DIRECTORY config launch rviz
   DESTINATION share/${PROJECT_NAME}
 )
 
